jsx, sass, speedcubing edits

--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -2,7 +2,8 @@
     
     .MenuContainer {
         display: inline-block;
-        width: 80%
+        margin-left: 10vw;
+        width: 80vw;
     }
     
     .navbar {
