--- a/src/components/Speedcubing.scss
+++ b/src/components/Speedcubing.scss
@@ -8,6 +8,8 @@
     .YTimage {
         width: 26vw;
         cursor: pointer;
+        opacity: 1;
+        transition: opacity 0.3s ease;
     }
 
     .YTtitle {
@@ -15,8 +17,20 @@
         width: 24vw;
     }
 
-    .YTimage:hover {
-        opacity: 0.5;
+    .imageContainer {
+        position: relative;
+        text-align: center;
+        display: block;
+    }
+
+    .imageContainer:hover {
+        cursor: pointer;
+        .YTimage {
+            opacity: 0.5;
+        }
+        .playArrow {
+            opacity: 1;
+        }
     }
 
     .YTgrid {
@@ -24,6 +38,15 @@
         grid-template-columns: repeat(3,26vw);
         grid-template-rows: auto;
         column-gap: 1vw
+    }
+
+    .playArrow {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: opacity 0.3s ease;
     }
 
     .custom-modal {
@@ -54,10 +77,6 @@
     .YTtitle {
         font-weight: bold;
         width: 24vw;
-    }
-
-    .YTimage:hover {
-        opacity: 0.5;
     }
 
     .YTgrid {
@@ -95,10 +114,6 @@
     .YTtitle {
         font-weight: bold;
         width: 85vw;
-    }
-
-    .YTimage:hover {
-        opacity: 0.5;
     }
 
     .YTgrid {
