major website overhaul

--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -1,5 +1,12 @@
     .ContactContainer {
+        padding-top: 10vw;
         text-align: center;
         position: relative;
-        min-height: 50vh;
+        min-height: 100vh;
+        font-family: Heebo;
+        background: #1a1a1a;
+    }
+
+    .ContactText {
+        color: white;
     }
