add grid layouts

--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -3,8 +3,9 @@
         text-align: center;
         position: relative;
         min-height: 100vh;
-        font-family: Heebo;
+        font-family: Ubuntu;
         background: #1a1a1a;
+        color: white;
     }
 
     .ContactText {
