--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -5,12 +5,11 @@
         background: #1a1a1a;
         padding: 5vw;
         bottom: 0;
-        font-family: Heebo;
+        font-family: Ubuntu;
     }
 
     .footer-link:hover {
-        transition: 0.5s;
-        color: #bababa !important;
+        color: #989898 !important;
     }
 }
 
@@ -21,7 +20,7 @@
         background: #1a1a1a;
         padding: 5vw;
         bottom: 0;
-        font-family: Heebo;
+        font-family: Ubuntu;
     }
 }
 
@@ -32,6 +31,6 @@
         background: #1a1a1a;
         padding: 5vw;
         bottom: 0;
-        font-family: Heebo;
+        font-family: Ubuntu;
     }
 }
