--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -9,10 +9,11 @@
 
     .navlink-custom {
         color: white;
+        font-family: Ubuntu;
     }
 
     .navlink-custom:hover {
-        color: #2784e4;
+        color: #989898;
     }
 
 }
@@ -27,6 +28,7 @@
 
     .navlink-custom {
         color: white;
+        font-family: Ubuntu;
     }
     
 }
@@ -50,6 +52,7 @@
 
     .navlink-custom {
         color: white;
+        font-family: Ubuntu;
     }
 
 }
