--- a/src/components/Error.scss
+++ b/src/components/Error.scss
@@ -3,7 +3,7 @@
     text-align: center;
     position: relative;
     min-height: 100vh;
-    font-family: Heebo;
+    font-family: Ubuntu;
     background: #1a1a1a;
 }
 
