--- a/src/components/Speedcubing.scss
+++ b/src/components/Speedcubing.scss
@@ -1,14 +1,15 @@
 @media (min-width: 768px) {
     .CubingContainer {
-        padding-top: 10vw;
+        padding-top: 12vw;
+        padding-left: 5vw;
+        padding-right: 5vw;
         min-height: 100vh;
-        text-align: left;
-        position: relative;
-        font-family: Heebo;
+        font-family: Ubuntu;
         background: #1a1a1a;
     }
     .YTimage {
         width: 26vw;
+        border-radius: 15px;
         cursor: pointer;
         opacity: 1;
         transition: opacity 0.3s ease;
@@ -16,8 +17,6 @@
 
     .YTtitle {
         font-weight: bold;
-        width: 24vw;
-        font-size: 1vw;
         color: white;
     }
 
@@ -39,10 +38,8 @@
 
     .YTgrid {
         display: grid;
-        grid-template-columns: repeat(3,26vw);
-        grid-template-rows: auto;
-        column-gap: 1vw;
-        margin-left: 10vw;
+        grid-template-columns: repeat(3,28vw);
+        gap: 1rem;
     }
 
     .playArrow {
@@ -69,37 +66,48 @@
     .SpeedcubingH1 {
         font-size: 3vw;
         font-weight: bold;
-        margin-left: 10vw;
-        color: white;
-    }
-
-    .SpeedcubingH2 {
-        font-weight: bold;
-        font-size: 1.5vw;
-        margin-left: 10vw;
         color: white;
     }
 
     .SpeedcubingText {
-        font-size: 1vw;
-        margin-left: 10vw;
         color: white;
-        width: 80vw;
+    }
+
+    .SpeedcubingCard {
+        color: white;
+        background: #303030;
+        border-radius: 25px;
+        box-shadow: 5px 5px black;
+        padding: 2vw;
+        font-family: Ubuntu;
+    }
+
+    .Video {
+        padding: 1vw;
+    }
+
+    .TallCard {
+        grid-row: span 2 / auto;
+    }
+
+    .LongCard {
+        grid-column: span 2 / auto;
     }
 
 }
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .CubingContainer {
-        padding-top: 10vw;
+        padding-top: 12vw;
+        padding-left: 5vw;
+        padding-right: 5vw;
         min-height: 100vh;
-        text-align: left;
-        position: relative;
-        font-family: Heebo;
+        font-family: Ubuntu;
         background: #1a1a1a;
     }
     .YTimage {
         width: 26vw;
+        border-radius: 15px;
         cursor: pointer;
         opacity: 1;
         transition: opacity 0.3s ease;
@@ -107,8 +115,6 @@
 
     .YTtitle {
         font-weight: bold;
-        width: 24vw;
-        font-size: 1vw;
         color: white;
     }
 
@@ -130,10 +136,8 @@
 
     .YTgrid {
         display: grid;
-        grid-template-columns: repeat(3,26vw);
-        grid-template-rows: auto;
-        column-gap: 1vw;
-        margin-left: 10vw;
+        grid-template-columns: repeat(3,28vw);
+        gap: 1rem;
     }
 
     .playArrow {
@@ -160,62 +164,92 @@
     .SpeedcubingH1 {
         font-size: 3vw;
         font-weight: bold;
-        margin-left: 10vw;
-        color: white;
-    }
-
-    .SpeedcubingH2 {
-        font-weight: bold;
-        font-size: 1.5vw;
-        margin-left: 10vw;
         color: white;
     }
 
     .SpeedcubingText {
-        font-size: 1vw;
-        margin-left: 10vw;
         color: white;
-        width: 80vw;
+    }
+
+    .SpeedcubingCard {
+        color: white;
+        background: #303030;
+        border-radius: 25px;
+        box-shadow: 5px 5px black;
+        padding: 2vw;
+        font-family: Ubuntu;
+    }
+
+    .Video {
+        padding: 1vw;
+    }
+
+    .TallCard {
+        grid-row: span 2 / auto;
+    }
+
+    .LongCard {
+        grid-column: span 2 / auto;
     }
 
 }
 
 @media (max-width: 767px) {
     .CubingContainer {
-        text-align: left;
-        position: relative;
-        font-family: Heebo;
+        padding-top: 5vw;
+        padding-left: 5vw;
+        padding-right: 5vw;
+        min-height: 100vh;
+        font-family: Ubuntu;
         background: #1a1a1a;
     }
-
     .YTimage {
-        width: 90vw;
+        width: 80vw;
+        border-radius: 15px;
         cursor: pointer;
+        opacity: 1;
+        transition: opacity 0.3s ease;
     }
 
     .YTtitle {
         font-weight: bold;
-        width: 85vw;
         color: white;
-        font-size: 4vw;
+    }
+
+    .imageContainer {
+        position: relative;
+        text-align: center;
+        display: block;
+    }
+
+    .imageContainer:hover {
+        cursor: pointer;
+        .YTimage {
+            opacity: 0.5;
+        }
+        .playArrow {
+            opacity: 1;
+        }
     }
 
     .YTgrid {
-        display: grid;
-        grid-template-columns: repeat(1,90vw);
-        grid-template-rows: auto;
-        row-gap: 5vw;
-        margin-left: 5vw;
+        display: block;
     }
-    
+
+    .playArrow {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
+
     .custom-modal {
         display: flex;
         text-align: center;
         justify-content: center;
-    }
-
-    .playArrow {
-        display: none;
+        top: 10vw !important;
     }
 
     .videoPlayer {
@@ -224,24 +258,26 @@
     }
 
     .SpeedcubingH1 {
-        font-size: 10vw;
+        font-size: 7.5vw;
         font-weight: bold;
-        margin-left: 5vw;
-        color: white;
-    }
-
-    .SpeedcubingH2 {
-        font-weight: bold;
-        font-size: 5vw;
-        margin-left: 5vw;
         color: white;
     }
 
     .SpeedcubingText {
-        font-size: 3vw;
-        margin-left: 5vw;
         color: white;
-        width: 80vw;
-        margin-bottom: 5vw;
+    }
+
+    .SpeedcubingCard {
+        color: white;
+        background: #303030;
+        border-radius: 25px;
+        box-shadow: 5px 5px black;
+        padding: 8vw;
+        font-family: Ubuntu;
+        margin-top: 5vw;
+    }
+
+    .Video {
+        padding: 5vw;
     }
 }
