hero image as background

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -37,9 +37,10 @@
         margin-right: 2vw;
     }
 
-    .SplashImage {
+    .HeroImageArea {
         width: 100vw;
-        opacity: 0.85;
+        height: 62.5vw;
+        background-size: cover;
     }
 
     .ContentContainer {
@@ -157,9 +158,10 @@
         margin-right: 2vw;
     }
 
-    .SplashImage {
+    .HeroImageArea {
         width: 100vw;
-        opacity: 0.85;
+        height: 62.5vw;
+        background-size: cover;
     }
 
     .ContentContainer {
@@ -268,9 +270,10 @@
         float: left;
     }
 
-    .SplashImage {
+    .HeroImageArea {
+        width: 100vw;
         height: 90vw;
-        opacity: 0.85;
+        background-size: cover;
     }
 
     .ContentContainer {
