--- a/src/pages/Project.scss
+++ b/src/pages/Project.scss
@@ -1,9 +1,11 @@
+@import '../theme.scss';
+
     .ProjectsContainer {
         padding-top: 10vw;
         text-align: center;
         position: relative;
         min-height: 100vh;
-        font-family: Ubuntu;
+        font-family: $font;
         background: #1a1a1a;
     }
 
