--- a/src/pages/Speedcubing.scss
+++ b/src/pages/Speedcubing.scss
@@ -1,10 +1,12 @@
+@import '../theme.scss';
+
 @media (min-width: 768px) {
     .CubingContainer {
         padding-top: 12vw;
         padding-left: 5vw;
         padding-right: 5vw;
         min-height: 100vh;
-        font-family: Ubuntu;
+        font-family: $font;
         background: #1a1a1a;
     }
     .YTimage {
@@ -79,7 +81,7 @@
         border-radius: 25px;
         box-shadow: 5px 5px black;
         padding: 2vw;
-        font-family: Ubuntu;
+        font-family: $font;
     }
 
     .Video {
@@ -102,7 +104,7 @@
         padding-left: 5vw;
         padding-right: 5vw;
         min-height: 100vh;
-        font-family: Ubuntu;
+        font-family: $font;
         background: #1a1a1a;
     }
     .YTimage {
@@ -177,7 +179,7 @@
         border-radius: 25px;
         box-shadow: 5px 5px black;
         padding: 2vw;
-        font-family: Ubuntu;
+        font-family: $font;
     }
 
     .Video {
@@ -200,7 +202,7 @@
         padding-left: 5vw;
         padding-right: 5vw;
         min-height: 100vh;
-        font-family: Ubuntu;
+        font-family: $font;
         background: #1a1a1a;
     }
     .YTimage {
@@ -273,7 +275,7 @@
         border-radius: 25px;
         box-shadow: 5px 5px black;
         padding: 8vw;
-        font-family: Ubuntu;
+        font-family: $font;
         margin-top: 5vw;
     }
 
