--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -1,47 +1,29 @@
 @import '../theme.scss';
 
-.black-text {
-    color: black !important;
-
-    &:hover {
-        color: #989898;
-    }
-}
-
-.navlink-custom {
-    color: white;
-    font-family: $font;
-    text-transform: uppercase;
-    font-size: 14px;
-
-    &:hover {
-        color: #989898;
+.navlink-custom:hover {
+    .Underline:before {
+        visibility: visible;
+        transform: scaleX(1);
     }
 }
 
 @media (min-width: 768px) {
     .MenuContainer {
-        position: absolute;
         margin-left: 10vw;
         width: 80vw;
-        z-index: 999;
     }
-}
 
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-    .MenuContainer {
-        position: absolute;
-        margin-left: 10vw;
-        width: 80vw;
-        z-index: 999;
+    .navlink-custom {
+        color: black !important;
+        font-family: $font;
+        text-transform: uppercase;
+        font-size: 14px;
     }
 }
 
 @media (max-width: 767px) {
     .MenuContainer {
         width: 100vw;
-        z-index: 999;
-        background: #1a1a1a;
     }
 
     .navbar-toggler {
@@ -51,5 +33,12 @@
         left:86.5vw;
         top:5.35vw;
         height:8vw;
+    }
+
+    .navlink-custom {
+        color: black !important;
+        font-family: $font;
+        text-transform: uppercase;
+        font-size: 16px;
     }
 }
