--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -1,7 +1,26 @@
 @import '../theme.scss';
 
+@keyframes SentIcon {
+  0% {
+      width: 0px;
+      height: 0px;
+      transform: rotate(-270deg);
+  }
+  100% {
+      width: 48px;
+      height: 48px;
+      transform: rotate(0deg);
+  }
+}
+
+.Contact {
+  animation: FadeIn 1s;
+}
+
 .CheckIcon {
-  animation: FadeIn 0.9s;
+  animation: SentIcon 0.9s;
+  width: 48px;
+  height: 48px;
 }
 
 .ContactContainer {
