--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -7,8 +7,6 @@
       transform: rotate(-270deg);
   }
   100% {
-      width: 48px;
-      height: 48px;
       transform: rotate(0deg);
   }
 }
@@ -17,22 +15,23 @@
   animation: FadeIn 1s;
 }
 
-.CheckIcon {
-  animation: SentIcon 0.9s;
-  width: 48px;
-  height: 48px;
-}
+@media (min-width: 768px) {
+  .CheckIcon {
+    animation: SentIcon 0.9s;
+    width: 48px;
+    height: 48px;
+  }
 
-.ContactContainer {
+  .ContactContainer {
     text-align: center;
     position: relative;
     font-family: $font;
     margin-left: 27.5vw;
     margin-top: 4vw;
     min-height: calc(100vh - 106px - 159px - 4vw);
-}
+  }
 
-.ContactForm {
+  .ContactForm {
     text-align: left;
   }
 
@@ -72,3 +71,64 @@
     margin-top: 1vw;
     background: #f5f5f5;
   }
+}
+
+@media (max-width: 767px) {
+  .CheckIcon {
+    animation: SentIcon 0.9s;
+    width: 36px;
+    height: 36px;
+  }
+
+  .ContactContainer {
+    text-align: center;
+    position: relative;
+    font-family: $font;
+    margin-top: 4vw;
+    min-height: calc(100vh - 106px - 159px - 4vw);
+  }
+
+  .ContactForm {
+    text-align: left;
+    width: 90vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+
+  .NameInputContainer {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .NameInput {
+    flex: 1;
+    height: 10vw;
+    width: 40vw;
+    font-family: $font;
+    font-size: 5vw;
+    margin-bottom: 3vw;
+    border: 1px black solid;
+    background: #f5f5f5;
+  }
+
+  .FormInput {
+    width: 90vw;
+    height: 10vw;
+    font-family: $font;
+    font-size: 5vw;
+    margin-bottom: 3vw;
+    border: 1px black solid;
+    background: #f5f5f5;
+  }
+
+  .MessageInput {
+    width: 90vw;
+    height: 20vw;
+    font-family: $font;
+    font-size: 5vw;
+    border: 1px black solid;
+    resize: vertical;
+    margin-top: 3vw;
+    background: #f5f5f5;
+  }
+}
