--- a/src/theme.scss
+++ b/src/theme.scss
@@ -116,7 +116,7 @@ $font2: Raleway;
 }
 
 @media (max-width: 767px) {
-    .ActionButton {
+    .ActionButton, .ActionButton2 {
         transition: 0.5s;
         padding: 1em 1.5em;
         font-size: 3vw;
@@ -129,9 +129,43 @@ $font2: Raleway;
         background: white;
         cursor: pointer;
     }
+
+    .ActionButton2 {
+        background: black;
+        color: white;
+
+        &:disabled {
+            background: grey;
+            cursor: default;
+        }
+    }
         
-    .Underline:before {
-        display: none;
+    .ActionButton:hover, .ActionButton2:hover {
+        .Underline:before, .Underline2:before {
+            visibility: visible;
+            transform: scaleX(1);
+        }
+    }
+    
+    .Underline, .Underline2 {
+        position: relative;
+    }
+    
+    .Underline:before, .Underline2:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: -2px;
+        left: 0;
+        background: black;
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.3s ease-in-out;
+    }
+
+    .Underline2:before {
+        background: white;
     }
 
     .Header1 {
@@ -139,6 +173,18 @@ $font2: Raleway;
         font-weight: 200;
         font-size: 12vw;
         color: black;
+    }
+
+    .Header2 {
+        font-weight: bold;
+        font-size: 2vw;
+        font-weight: lighter;
+        font-family: $font2;
+        text-transform: uppercase;
+    }
+
+    .Big {
+        font-size: 3vw;
     }
 
     .Text1 {
@@ -152,5 +198,20 @@ $font2: Raleway;
         font-family: $font;
         font-size: 1vw;
         color: black;
+    }
+
+    .CardArea {
+        margin-left: 4.5vw;
+        display: grid;
+        gap: 1vw;
+        grid-template-columns: repeat(2, 40vw);
+    }
+
+    .Card {
+        color: white;
+        background: black;
+        font-family: $font;
+        background-size: cover;
+        text-align: center;
     }
 }
