--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -76,8 +76,8 @@
 @media (max-width: 767px) {
   .CheckIcon {
     animation: SentIcon 0.9s;
-    width: 36px;
-    height: 36px;
+    width: 10vw;
+    height: 10vw;
   }
 
   .ContactContainer {
